<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/periodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_period_label" />

    <Spinner
        android:id="@+id/periodSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/repeat_period_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newSpendDateLabel"
        android:text="@string/spend_date_label" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/pickDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/spend_pick_date_label" />

        <EditText
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/pickDateButton"
            android:layout_toLeftOf="@+id/pickDateButton"
            android:editable="false"
            android:inputType="date" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spend_type_label" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spend_type_label" />

    <TextView
        android:id="@+id/amountInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spend_amount_label" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberSigned" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:text="@string/spend_ok_label" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:layout_alignTop="@+id/okButton"
            android:text="@string/spend_cancel_label" />

    </RelativeLayout>

</LinearLayout>