<?xml version="1.0" encoding="utf-8"?>
<!-- This is the view for each entry in the list of spends
    (as shown in the spend_manager).
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spend_entry_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView android:text="@string/spend_date_label"
        android:id="@+id/spendEntryDateText"
        android:layout_alignParentLeft="true"
        android:paddingLeft="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView android:text="@string/spend_type_label"
        android:id="@+id/spendEntryTypeText"
        android:layout_toRightOf="@+id/spendEntryDateText"
        android:paddingLeft="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView android:text="@string/spend_amount_label"
        android:id="@+id/spendEntryAmountText"
        android:layout_alignParentRight="true"
        android:paddingRight="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
